--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,29 @@
 .container {
   margin-top: 50px;
+  position: absolute;
+  border-left: 2px solid #e6e6e6;
+  border-right: 2px solid #e6e6e6;
+  height: 100% !important;
 }
+
 .container-chat {
-  margin-top: 50px;
+  margin-top: 100px !important;
+
+}
+
+.header {
+  background-color: #1474a4;
+  height: 50px;
+  width: 100%;
+  border: 0;
+  color: #fff;
+}
+
+.logo {
+  height: 100%;
+  width: 100%;
+}
+
+.web-chat {
+  margin-top: 
 }
