--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,70 @@
+@font-face {
+  font-family: "CentraleSans";
+  font-style: bold;
+  font-weight: 700;
+  src: url("./fonts/centrale_sans_bold-webfont.woff"); /* IE9 Compat Modes */
+  src: local("Open Sans"), local("OpenSans"),
+    url("./fonts/centrale_sans_bold-webfont.woff") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/centrale_sans_bold-webfont.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("./fonts/centrale_sans_bold-webfont.woff")
+      format("woff"),
+    /* Modern Browsers */ url("./fonts/centrale_sans_bold-webfont.woff")
+      format("truetype"); /* Safari, Android, iOS */
+}
+@font-face {
+  font-family: "CentraleSans";
+  font-style: normal;
+  font-weight: 300;
+  src: url("./fonts/centrale_sans_light-webfont.woff"); /* IE9 Compat Modes */
+  src: local("Open Sans"), local("OpenSans"),
+    url("./fonts/centrale_sans_light-webfont.woff") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/centrale_sans_light-webfont.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("./fonts/centrale_sans_light-webfont.woff")
+      format("woff"),
+    /* Modern Browsers */ url("./fonts/centrale_sans_light-webfont.woff")
+      format("truetype"); /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: "CentraleSans";
+  font-style: initial;
+  font-weight: 400;
+  src: url("./fonts/centrale_sans_medium-webfont.woff"); /* IE9 Compat Modes */
+  src: local("Open Sans"), local("OpenSans"),
+    url("./fonts/centrale_sans_medium-webfont.woff") format("embedded-opentype"),
+    /* IE6-IE8 */ url("./fonts/centrale_sans_medium-webfont.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */ url("./fonts/centrale_sans_medium-webfont.woff")
+      format("woff"),
+    /* Modern Browsers */ url("./fonts/centrale_sans_medium-webfont.woff")
+      format("truetype"); /* Safari, Android, iOS */
+}
+
 .container {
   margin-top: 50px;
-  position: absolute;
-  border-left: 2px solid #e6e6e6;
-  border-right: 2px solid #e6e6e6;
-  height: 100% !important;
+}
+body {
+  background: #fcf7ff;
+  font-family: "CentraleSans";
+  font-weight: 400;
+}
+p {
+  font-family: "CentraleSans" !important;
+  font-weight: 300;
+}
+ul {
+  background: #fcf7ff;
+  /* background-image: linear-gradient(#FCF7FF, #e4eaf0); */
+  /* box-shadow: inset 0 0 40px rgba(255, 255, 255, 0.7), 0 0 0 5px rgba(255, 255, 255, 0.15); */
 }
 
 .container-chat {
-  margin-top: 100px !important;
-
+  margin-top: 50px !important;
+  border: 1px solid #e4e1e1d4;
+  border-radius: 10px;
+  margin-bottom: 30px;
 }
 
 .header {
@@ -24,6 +80,87 @@
   width: 100%;
 }
 
-.web-chat {
-  margin-top: 
+.from-user .bubble {
+  border-radius: 20px !important;
+  background: #fbf5f6 !important;
+  color: #000 !important;
+  padding: 5px !important;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.08);
+}
+.bubble {
+  border-radius: 28px !important;
+  background: #176498 !important;
+  color: #fff !important;
+  padding: 5px !important;
+  position: relative;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.08);
+}
+.content span {
+  border-radius: 28px;
+  background: #fbf5f6;
+  color: black;
+  padding: 3px;
+  margin-top: 5px;
+}
+.ac-pushButton {
+  margin-bottom: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+  background: #bfe2eb !important;
+  border: 0 !important;
+  border-radius: 3px !important;
+  font-family: "CentraleSans" !important;
+  font-weight: 400;
+  font-size: 16px;
+}
+.ac-textBlock {
+  color: #fff !important;
+}
+.webchat__row > span {
+  border: 1px solid #eee;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.08);
+  font-family: "CentraleSans" !important;
+  font-weight: 300;
+}
+.ac-image {
+  width: 50% !important;
+  border-radius: 46%;
+}
+.content .message {
+  position: relative;
+  margin-left: 15px;
+}
+/* li .webchat__row.message::before {
+  position: absolute;
+  width: 10px;
+  content: "";
+  height: 10px;
+  background: #58d68d;
+  border-radius: 50%;
+  top: 16px;
+  z-index: 999;
+  left: -12px;
+}
+.from-user .content .webchat__row .message::before {
+  display: none !important;
+} */
+input {
+  border-radius: 3px;
+  padding: 3px !important;
+  padding-left: 17px !important;
+  background-color: #f0f8fa40 !important;
+  border: 1px solid #fbf5f6 !important;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.08);
+  font-family: "CentraleSans" !important;
+  font-weight: 300;
+}
+.main {
+  background-color: #fbf5f6 !important;
+  border-radius: 6px;
+}
+.ac-container > div {
+  justify-content: center !important;
+}
+button {
+  cursor: pointer;
 }
